Getting this to build requires node 10 ;)

--- a/package.json
+++ b/package.json
@@ -76,11 +76,14 @@
     "sinon": "^6.1.4"
   },
   "peerDependencies": {
-    "react": "^16.2.0-0"
+    "react": "^16.2.0-0 || ^17.0.0"
   },
   "dependencies": {
     "eslint-plugin-flowtype": "^2.50.0",
     "exenv": "^1.2.0",
     "prop-types": "^15.6.2"
+  },
+  "volta": {
+    "node": "10.24.1"
   }
 }
