--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-key-handler",
-  "version": "1.2.0-beta.3",
+  "name": "@banzai-inc/react-key-handler",
+  "version": "1.2.0-beta.4",
   "description": "React component to handle keyboard events",
   "homepage": "https://github.com/ayrton/react-key-handler",
   "author": {
@@ -11,10 +11,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/ayrton/react-key-handler.git"
+    "url": "https://github.com/banzai-inc/react-key-handler.git"
   },
   "bugs": {
-    "url": "https://github.com/ayrton/react-key-handler/issues"
+    "url": "https://github.com/banzai-inc/react-key-handler/issues"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -81,7 +81,7 @@
   "dependencies": {
     "eslint-plugin-flowtype": "^2.50.0",
     "exenv": "^1.2.0",
-    "prop-types": "^15.6.2"
+    "prop-flo": "^15.6.2"
   },
   "volta": {
     "node": "10.24.1"
